[package]
name = "bone"
version = "0.1.0"
edition = "2021"
authors = ["imagineee"]
license = "MIT"
repository = "https://github.com/imagineeeinc/bone"
description = "🦴A super light, toy Javascript runtime based on deno🦴"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.143.0"
gflags = "0.3.11"
deno_runtime = "0.73.0"
tokio = { version = "1.20.0", features = ["full"] }
